--- a/index.html
+++ b/index.html
@@ -1,8 +1,7 @@
 <!DOCTYPE html>
 <html>
 <body>
-<h1>Hello World</h1>
-## Jekyll in the house.
-<p>Let's try it.</p>
+<h1>Riley Horn</h1>
+<p>Portfolio.</p>
 </body>
 </html>
