--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 			<p>Hi, I’m Draco the Dragon</p>
 			<div class="units-row units-split wrap">
 				<div class="unit-20">
-					<img src="img/ava.jpg" alt="Avatar">
+					<img src="img/lives_in_house.png" alt="Avatar">
 				</div>
 				<div class="unit-80">
 					<h1>I live in<br><span id="typed"></span></h1>
