--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 	<style>
 		.intro h1:before {
 			/* Edit this with your name or anything else */
-			content: 'DRACO';
+			content: 'Riley';
 		}
 	</style>
 </head>
@@ -52,7 +52,7 @@
 	<!-- Introduction -->
 	<div class="intro section" id="about">
 		<div class="container">
-			<p>Hi, I’m Draco the Dragon</p>
+			<p>Hi, I’m Riley</p>
 			<div class="units-row units-split wrap">
 				<div class="unit-20">
 					<img src="img/lives_in_house.png" alt="Avatar">
@@ -61,7 +61,7 @@
 					<h1>I live in<br><span id="typed"></span></h1>
 				</div>
 				<p>
-					Draco is a constellation in the far northern sky. Its name is Latin for dragon. Draco is circumpolar (that is, never setting) for many observers in the northern hemisphere. It was one of the 48 constellations listed by the 2nd century astronomer Ptolemy.
+					I am a graduate research assistant studing Biomechanics and Motor Control at East Carolina Univeristy.
 				</p>
 			</div>
 		</div>
