--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 					<h1>I live in<br><span id="typed"></span></h1>
 				</div>
 				<p>
-					I am a graduate research assistant studing Biomechanics and Motor Control at East Carolina Univeristy.
+					I am a graduate research assistant studing Biomechanics and Motor Control at East Carolina University.
 				</p>
 			</div>
 		</div>
@@ -142,14 +142,14 @@
 		<div class="container">
 			<div class="units-row">
 			    <div class="unit-50">
-			    	<p>Handcrafted by Afnizar Nur Ghifari</p>
+			    	<p></p>
 			    </div>
 			    <div class="unit-50">
 					<ul class="social list-flat right">
-						<li><a href="mailto:afnizarhilmi@gmail.com"><i class="fa fa-send"></i></a></li>
+						<!-- <li><a href="mailto:afnizarhilmi@gmail.com"><i class="fa fa-send"></i></a></li>
 						<li><a href="http://twitter.com/afnizarnur"><i class="fa fa-twitter"></i></a></li>
 						<li><a href="http://dribbble.com/afnizarnur"><i class="fa fa-dribbble"></i></a></li>
-						<li><a href="http://behance.com/afnizarnur"><i class="fa fa-behance"></i></a></li>
+						<li><a href="http://behance.com/afnizarnur"><i class="fa fa-behance"></i></a></li> -->
 					</ul>
 			    </div>
 			</div>
@@ -164,7 +164,7 @@
     <script>
 		function newTyped(){}$(function(){$("#typed").typed({
 		// Change to edit type effect
-		strings: ["far northern sky", "your galaxy", "everywhere"],
+		strings: ["Ann Arbor", "Greenville", "North Carolina", "Michigan", "United States", "California?"],
 
 		typeSpeed:90,backDelay:700,contentType:"html",loop:!0,resetCallback:function(){newTyped()}}),$(".reset").click(function(){$("#typed").typed("reset")})});
     </script>
