--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <link rel="stylesheet" href="css/kube.min.css" />
     <link rel="stylesheet" href="css/font-awesome.min.css" />
     <link rel="stylesheet" href="css/custom.min.css" />
-    <link rel="shortcut icon" href="img/lives_in_house.png" />
+    <link rel="shortcut icon" href="img/lives_in_house.jpg" />
 	<link href='https://fonts.googleapis.com/css?family=Playfair+Display+SC:700' rel='stylesheet' type='text/css'>
 	<link href='https://fonts.googleapis.com/css?family=Lato:400,700' rel='stylesheet' type='text/css'>
 	<style>
@@ -55,7 +55,7 @@
 			<p>Hi, I’m Riley</p>
 			<div class="units-row units-split wrap">
 				<div class="unit-20">
-					<img src="img/lives_in_house.png" alt="Avatar">
+					<img src="img/lives_in_house.jpg" alt="Avatar">
 				</div>
 				<div class="unit-80">
 					<h1>I live in<br><span id="typed"></span></h1>
