--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 				    <ul>
 				        <li class="active"><a href="#about">About</a></li>
 				        <li><a href="#experiences">Experiences</a></li>
-				        <li><a href="#achievements">Achievements</a></li>
+				        <li><a href="#achievements">Education</a></li>
 				        <li><a href="#skills">Skills</a></li>
 				    </ul>
 				</nav>
@@ -52,81 +52,77 @@
 	<!-- Introduction -->
 	<div class="intro section" id="about">
 		<div class="container">
+			<!-- Greeting Line-->>
 			<p>Hi, I’m Riley</p>
 			<div class="units-row units-split wrap">
 				<div class="unit-20">
 					<img src="img/lives_in_house.jpg" alt="Avatar">
 				</div>
 				<div class="unit-80">
-					<h1>I live in<br><span id="typed"></span></h1>
+					<!-- Changing Line Static-->>
+					<h1>I research<br><span id="typed"></span></h1>
 				</div>
 				<p>
-					I am a graduate research assistant studing Biomechanics and Motor Control at East Carolina University.
+					I am scientific researcher studying Biomechanics and Motor Learning at East Carolina University as a graduate research assistant.
 				</p>
 			</div>
 		</div>
 	</div>
 
-	<!-- Work Experience -->
+	<!-- Experiences -->
 	<div class="work section second" id="experiences">
 		<div class="container">
-			<h1>Work<br>Experiences</h1>
+			<h1>Experiences</h1>
 			<ul class="work-list">
-				<li>2014-2015</li>
-				<li><a href="#">PT Traveloka Indonesia</a></li>
-				<li>Web Designer</li>
+				<li>2019-Present</li>
+				<li><a href="#">Clinical Research Assistant</a></li>
+				<li>Human Movement Analysis Laboratory</li>
+			</ul>
+			<ul class="work-list">
+				<li>2018-2019</li>
+				<li><a href="#">Physical Therapy Aide</a></li>
+				<li>Advanced Physical Therapy Clinic</li>
 			</ul>
 			<ul class="work-list">
 				<li>2014-2015</li>
-				<li><a href="#">Wego</a></li>
-				<li>UI/UX Designer</li>
-			</ul>
-			<ul class="work-list">
-				<li>2014-2015</li>
-				<li><a href="#">Garuda Indonesia</a></li>
-				<li>System Designer</li>
+				<li><a href="#">Motion Capture Teaching Assistant</a></li>
+				<li>University of Michigan</li>
 			</ul>
 		</div>
 	</div>
 
-	<!-- Award & Achievements -->
+	<!-- Education -->
 	<div class="award section second" id="achievements">
 		<div class="container">
-			<h1>Award &amp;<br>Achievements</h1>
+			<h1>Award &amp;<br>Education</h1>
 			<ul class="award-list list-flat">
-				<li>January 2014</li>
-				<li>Attained PHP5 certification</li>
-				<li>Hold world/Olympic record</li>
+				<li>2021</li>
+				<li>MSc. Kinesiology - Biomechanics & Motor Control</li>
+				<li>East Carolina University</li>
 			</ul>
 			<ul class="award-list list-flat">
-				<li>December 2014</li>
-				<li>Audited X number of clients in only Y amount of time</li>
-				<li>Held a perfect attendance record</li>
-				<li>Were promoted after only X months in the role</li>
-			</ul>
-			<ul class="award-list list-flat">
-				<li>March 2014</li>
-				<li>Placed employees at X companies</li>
-				<li>United multiple teams post-merger</li>
+				<li>2018</li>
+				<li>B.S. Kinesiology - Movement Science</li>
+				<li>University of Michigan</li>
 			</ul>
 		</div>
 	</div>
 
-	<!-- Technical Skills -->
+	<!-- Skills -->
 	<div class="skills section second" id="skills">
 		<div class="container">
-			<h1>Technical<br>Skills</h1>
+			<h1>Skills</h1>
 			<ul class="skill-list list-flat">
-				<li>Web Technology</li>
-				<li>HTML / CSS / SASS / PHP / Javascript</li>
+				<li>Programming</li>
+				<li>MATLAB / C++ / HTML</li>
 			</ul>
 			<ul class="skill-list list-flat">
-				<li>Database</li>
-				<li>MySQL / MongoDB / Oracle / Access</li>
+				<li>Statistics</li>
+				<li>SPSS / MS Excel / RedCap</li>
 			</ul>
 			<ul class="skill-list list-flat">
-				<li>Framework</li>
-				<li>Laravel / CodeIgniter / Zend / Ruby On Rails</li>
+				<li>Software</li>
+				<li>Visual3D / Vicon Blade / Qualysis</li>
 			</ul>
 		</div>
 	</div>
@@ -134,7 +130,7 @@
 	<!-- Quote -->
 	<div class="quote">
 		<div class="container text-centered">
-			<h1>fight against the ugliness.</h1>
+			<h1>teach me something you learned today</h1>
 		</div>
 	</div>
 
@@ -164,7 +160,7 @@
     <script>
 		function newTyped(){}$(function(){$("#typed").typed({
 		// Change to edit type effect
-		strings: ["Ann Arbor", "Greenville", "North Carolina", "Michigan", "United States", "California?"],
+		strings: ["Biomechanics", "Motor Learning", "Kinesiology", "Exercise Physiology", "Human Performance", "Ergonomics"],
 
 		typeSpeed:90,backDelay:700,contentType:"html",loop:!0,resetCallback:function(){newTyped()}}),$(".reset").click(function(){$("#typed").typed("reset")})});
     </script>
