Image and custom.scss updates

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 	<div class="intro section" id="about">
 		<div class="container">
 			<!-- Greeting Line-->>
-			<p>Hi, I’m Riley</p>
+			<p></p>
 			<div class="units-row units-split wrap">
 				<div class="unit-20">
 					<img src="img/lives_in_house.jpg" alt="Avatar">
@@ -94,7 +94,7 @@
 	<!-- Education -->
 	<div class="award section second" id="achievements">
 		<div class="container">
-			<h1>Award &amp;<br>Education</h1>
+			<h1>Education</h1>
 			<ul class="award-list list-flat">
 				<li>2021</li>
 				<li>MSc. Kinesiology - Biomechanics & Motor Control</li>
