--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 			<p></p>
 			<div class="units-row units-split wrap">
 				<div class="unit-20">
-					<img src="img/lives_in_house.jpg" alt="Avatar">
+					<img src="img/riley_profile.png" alt="Avatar">
 				</div>
 				<div class="unit-80">
 					<!-- Changing Line Static-->>
