--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 	<div class="intro section" id="about">
 		<div class="container">
 			<!-- Greeting Line-->>
-			<!-- <p>Hi, I'm Riley</p> -->
+			<p>Hi, my name is Riley</p>
 			<div class="units-row units-split wrap">
 				<div class="unit-20">
 					<img src="img/riley_profile.jpg" alt="Avatar">
@@ -62,6 +62,7 @@
 					<!-- Changing Line Static-->>
 					<h1>I research<br><span id="typed"></span></h1>
 				</div>
+				<br> <!-- added a line break -->
 				<p>
 					I am scientific researcher studying Biomechanics and Motor Learning at East Carolina University as a graduate research assistant.
 				</p>
