--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 		</div>
 	</div>
 
-	<!-- Introduction -->
+<!-- 	<!-- Introduction -->
 	<div class="intro section" id="about">
 		<div class="container">
 			<!-- Greeting Line-->>
@@ -63,6 +63,24 @@
 					<h1>I research<br><span id="typed"></span></h1>
 				</div>
 				<br> <!-- added a line break -->
+				<p>
+					
+				</p>
+			</div>
+		</div>
+	</div> -->
+
+	<!-- Introduction -->
+	<div class="intro section" id="about">
+		<div class="container">
+			<p>Hi, I’m Riley</p>
+			<div class="units-row units-split wrap">
+				<div class="unit-20">
+					<img src="img/ava.jpg" alt="Avatar">
+				</div>
+				<div class="unit-80">
+					<h1>I investigate<br><span id="typed"></span></h1>
+				</div>
 				<p>
 					I am scientific researcher studying Biomechanics and Motor Learning at East Carolina University as a graduate research assistant.
 				</p>
