--- a/index.html
+++ b/index.html
@@ -49,34 +49,13 @@
 		</div>
 	</div>
 
-<!-- 	<!-- Introduction -->
-	<div class="intro section" id="about">
-		<div class="container">
-			<!-- Greeting Line-->>
-			<p>Hi, my name is Riley</p>
-			<div class="units-row units-split wrap">
-				<div class="unit-20">
-					<img src="img/riley_profile.jpg" alt="Avatar">
-				</div>
-				<div class="unit-80">
-					<!-- Changing Line Static-->>
-					<h1>I research<br><span id="typed"></span></h1>
-				</div>
-				<br> <!-- added a line break -->
-				<p>
-					
-				</p>
-			</div>
-		</div>
-	</div> -->
-
 	<!-- Introduction -->
 	<div class="intro section" id="about">
 		<div class="container">
 			<p>Hi, I’m Riley</p>
 			<div class="units-row units-split wrap">
 				<div class="unit-20">
-					<img src="img/ava.jpg" alt="Avatar">
+					<img src="img/riley_profile.jpg" alt="Avatar">
 				</div>
 				<div class="unit-80">
 					<h1>I investigate<br><span id="typed"></span></h1>
@@ -149,7 +128,7 @@
 	<!-- Quote -->
 	<div class="quote">
 		<div class="container text-centered">
-			<h1>teach me something you learned today</h1>
+			<h1>"tell me something you learned today" - umang</h1>
 		</div>
 	</div>
 
