--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 		<div class="container">
 			<header class="group top-nav">
 				<div class="navigation-toggle" data-tools="navigation-toggle" data-target="#navbar-1">
-				    <span class="logo">DRACO</span>
+				    <span class="logo">Riley Horn</span>
 				</div>
 			    <nav id="navbar-1" class="navbar item-nav">
 				    <ul>
@@ -58,7 +58,7 @@
 					<img src="img/riley_profile.jpg" alt="Avatar">
 				</div>
 				<div class="unit-80">
-					<h1>I investigate<br><span id="typed"></span></h1>
+					<h1>I research<br><span id="typed"></span></h1>
 				</div>
 				<p>
 					I am scientific researcher studying Biomechanics and Motor Learning at East Carolina University as a graduate research assistant.
