--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 					<h1>I research<br><span id="typed"></span></h1>
 				</div>
 				<p>
-					I am scientific researcher studying Biomechanics and Motor Learning at East Carolina University as a graduate research assistant.
+					I am a researcher studying Biomechanics and Motor Learning at East Carolina University as a graduate research assistant.
 				</p>
 			</div>
 		</div>
