--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 					<h1>I research<br><span id="typed"></span></h1>
 				</div>
 				<p>
-					I am a researcher studying Biomechanics and Motor Learning at East Carolina University as a graduate research assistant.
+					Hello! I am currently a clinical biomechanics research assistant in the Human Movement Analysis Laboratories at East Carolina University. I intend to pursue a career as a scientific researcher investigating human movement at the intersection of physics, physiology, and technology. I enjoy finding practical approaches and gathering relevant biomechanical data to tackle research questions. In my current research, I am investigating the effects of aging on postural control and the potential of tactile somatosensation measures for clinical fall risk identification. I hope to use my experience conducting experimental research design, developing programming solutions, and performing scientific analysis to pursue my scientific curiosity.  
 				</p>
 			</div>
 		</div>
@@ -82,7 +82,7 @@
 				<li>Advanced Physical Therapy Clinic</li>
 			</ul>
 			<ul class="work-list">
-				<li>2014-2015</li>
+				<li>2017-2018</li>
 				<li><a href="#">Motion Capture Teaching Assistant</a></li>
 				<li>University of Michigan</li>
 			</ul>
@@ -116,7 +116,7 @@
 			</ul>
 			<ul class="skill-list list-flat">
 				<li>Statistics</li>
-				<li>SPSS / MS Excel / RedCap</li>
+				<li>SPSS / MS Excel</li>
 			</ul>
 			<ul class="skill-list list-flat">
 				<li>Software</li>
