--- a/index.html
+++ b/index.html
@@ -158,9 +158,9 @@
     <script>
 		function newTyped(){}$(function(){$("#typed").typed({
 		// Change to edit type effect
-		strings: ["Biomechanics", "Motor Learning", "Kinesiology", "Exercise Physiology", "Human Performance", "Ergonomics"],
+		strings: ["Biomechanics", "Motor Learning", "Kinesiology"],
 
-		typeSpeed:90,backDelay:700,contentType:"html",loop:!0,resetCallback:function(){newTyped()}}),$(".reset").click(function(){$("#typed").typed("reset")})});
+		typeSpeed:50,backDelay:700,contentType:"html",loop:!0,resetCallback:function(){newTyped()}}),$(".reset").click(function(){$("#typed").typed("reset")})});
     </script>
 </body>
 </html>
